objects/TravelHistory__c.object
<CustomObject><fields>
        <fullName>BackInOffice__c</fullName>
        <description>Date at time person will be back in office after travel</description>
        <inlineHelpText>Date at time person will be back in office after travel</inlineHelpText>
        <label>Back in Office</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel History</relationshipLabel>
        <relationshipName>TravelHistory</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>From__c</fullName>
        <description>Departure date or date starting holiday</description>
        <inlineHelpText>Departure date or date starting holiday</inlineHelpText>
        <label>From</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involvement</label>
        <referenceTo>BP_Involvement__c</referenceTo>
        <relationshipLabel>Travel History</relationshipLabel>
        <relationshipName>TravelHistory</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>NumberOfDays__c</fullName>
        <label>Number of Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Travel History</relationshipLabel>
        <relationshipName>TravelHistory</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>To__c</fullName>
        <description>Return date or date holiday finishes</description>
        <inlineHelpText>Return date or date holiday finishes</inlineHelpText>
        <label>To</label>
        <type>Date</type>
    </fields><fields>
        <fullName>TravelType__c</fullName>
        <description>Type of travel recorded</description>
        <label>Travel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Support Raising</fullName>
                </value>
                <value>
                    <fullName>Ministry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Records travel for vacation, ministry and support.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Travel History</label><nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Travel History</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Travel History</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>TravelType__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>BackInOffice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>